bug fix: overflow in page for long eq

--- a/app/globals.css
+++ b/app/globals.css
@@ -65,7 +65,15 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+.katex-display {
+  overflow-x: auto;
+  padding: 1rem 0;
+}
+
+.katex-display::-webkit-scrollbar {
+  display: none;
+}
+
 @layer base {
   * {
     @apply border-border;
